improving vorbis decoder memory usage

--- a/Client/qtlogging.ini
+++ b/Client/qtlogging.ini
@@ -1,10 +1,10 @@
 [Rules]
 *.debug=false
 controller.ninjam=true
-controller.main=true
-ninjamRoomWindow=true
-vorbis.encoder=true
-ninjam.service=true
+#ninjam.service=true
+#controller.main=true
+#ninjamRoomWindow=true
+#vorbis.encoder=true
 #roomStreamer=true
 #vst=true
 #portaudio=true
