--- a/qtlogging.ini
+++ b/qtlogging.ini
@@ -1,6 +1,7 @@
 [Rules]
 *.debug=false
-controller.ninjam=true
+#freeGeoIp=true
+#controller.ninjam=true
 #ninjam.service=true
 #controller.main=true
 #ninjamRoomWindow=true
