--- a/qtlogging.ini
+++ b/qtlogging.ini
@@ -4,10 +4,10 @@
 #freeGeoIp=true
 #controller.ninjam=true
 #ninjam.service=true
-#controller.main=true
+controller.main=true
 #ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
-#vst=true
+vst=true
 #portaudio=true
 
