--- a/qtlogging.ini
+++ b/qtlogging.ini
@@ -1,7 +1,7 @@
 [Rules]
 *.debug=false
 #recorder=true
-#freeGeoIp=true
+#ipToLocation=true
 #controller.ninjam=true
 #ninjam.service=true
 #controller.main=true
