audio working in mac

--- a/Client/qtlogging.ini
+++ b/Client/qtlogging.ini
@@ -1,5 +1,6 @@
 [Rules]
 *.debug=false
+qt.network.ssl.warning=false
 #recorder=true
 #ipToLocation=true
 #controller.ninjam=true
@@ -9,5 +10,5 @@
 #vorbis.encoder=true
 #roomStreamer=true
 #vst=true
-#portaudio=true
+portaudio=true
 
