--- a/Client/qtlogging.ini
+++ b/Client/qtlogging.ini
@@ -9,7 +9,7 @@ qt.network.ssl.warning=false
 #ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
-#vst=true
+vst=true
 #portaudio=true
 #midi=true
 
