vst working in mac

--- a/Client/qtlogging.ini
+++ b/Client/qtlogging.ini
@@ -9,7 +9,8 @@ qt.network.ssl.warning=false
 #ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
-vst=true
+#vst=true
+#vst.host=true
 #portaudio=true
 #midi=true
 
