--- a/Standalone/qtlogging.ini
+++ b/Standalone/qtlogging.ini
@@ -2,15 +2,15 @@
 *.debug=false
 qt.network.ssl.warning=false
 #recorder=true
-ipToLocation=true
-controller.ninjam=true
-ninjam.service=true
-controller.main=true
+#ipToLocation=true
+#controller.ninjam=true
+#ninjam.service=true
+#controller.main=true
 #ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
-vst=true
-vst.host=true
+#vst=true
+#vst.host=true
 #portaudio=true
 #midi=true
 
