fix the problem when VST is removed from DAWs
Former-commit-id: dbd64cee52bc759746f86425dcb4790675883d3c

--- a/Client/src/resources/qtlogging.ini
+++ b/Client/src/resources/qtlogging.ini
@@ -5,7 +5,7 @@ qt.network.ssl.warning=false
 #ipToLocation=true
 #controller.ninjam=true
 #ninjam.service=true
-#controller.main=true
+controller.main=true
 #ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
