--- a/Client/src/resources/qtlogging.ini
+++ b/Client/src/resources/qtlogging.ini
@@ -5,7 +5,7 @@ qt.network.ssl.warning=false
 #ipToLocation=true
 #controller.ninjam=true
 #ninjam.service=true
-controller.main=true
+#controller.main=true
 #ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
@@ -13,4 +13,5 @@ controller.main=true
 #vst.host=true
 #portaudio=true
 #midi=true
+plugin.vst=true
 
