--- a/src/resources/qtlogging.ini
+++ b/src/resources/qtlogging.ini
@@ -3,10 +3,10 @@
 qt.network.ssl.warning=false
 #recorder=true
 #ipToLocation=true
-#controller.ninjam=true
-#ninjam.service=true
-#controller.main=true
-#ninjamRoomWindow=true
+controller.ninjam=true
+ninjam.service=true
+controller.main=true
+ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
 #vst=true
