--- a/src/resources/qtlogging.ini
+++ b/src/resources/qtlogging.ini
@@ -3,15 +3,15 @@
 qt.network.ssl.warning=false
 #recorder=true
 #ipToLocation=true
-controller.ninjam=true
-ninjam.service=true
-controller.main=true
-ninjamRoomWindow=true
+#controller.ninjam=true
+#ninjam.service=true
+#controller.main=true
+#ninjamRoomWindow=true
 #vorbis.encoder=true
 #roomStreamer=true
 #vst=true
 #vst.host=true
 #portaudio=true
 #midi=true
-plugin.vst=true
+#plugin.vst=true
 
