--- a/src/resources/qtlogging.ini
+++ b/src/resources/qtlogging.ini
@@ -1,9 +1,9 @@
 [Rules]
-*.debug=false
+#*.debug=false
 qt.network.ssl.warning=false
 #recorder=true
 #ipToLocation=true
-controller.ninjam=true
+#controller.ninjam=true
 #ninjam.service=true
 #controller.main=true
 #ninjamRoomWindow=true
